fix nsaesue.html cannot go back to the index page

--- a/nsaesue/nsaesue.html
+++ b/nsaesue/nsaesue.html
@@ -15,7 +15,7 @@
     <section id="hero">
     <header>
         <nav class="navbar">
-            <div class="logos"><a href="../rush.html"><img src="element/nattikorn-low-resolution-logo-white-on-transparent-background.png"></a></div>
+            <div class="logos"><a href="../index.html"><img src="element/nattikorn-low-resolution-logo-white-on-transparent-background.png"></a></div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#exp00">Experience</a></li>
