fix anchor remove path to swanwang.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1>Rush Project Portfolio</h1>
                     <div class="selector">
                         <div class="swanwang">
-                            <a href="swanwang/swanwang.html"><img src="rush-element/swanwang-pic.png"></a>
+                            <a href=""><img src="rush-element/swanwang-pic.png"></a>
                             <p>swanwang's Portfolio</p>
                         </div>
                         <div class="nsaesue">
